# ldv-analysis

./: .envrc  .gitignore  README.md  parallel_run.py  pyproject.toml
.github/workflows/: test.yml
experiments/2026W09_initial/: 00_convert_tdms.py  01_electrical_input.py  02_velocity_profile.py  03_spectrum.py  04_2d_map.py  04a_boundary_detect.py  05_data_summary.py
experiments/2026W10_stepA/: README.md  af2026_figures.py  analyze_single.py  axial_p0_distribution.py  bvd_fit.py  calibrate_geometry.py  coppens_comparison.py  cross_section_profile.py  debug_fig8.py  electroacoustic.py  fft_sanity_check.py  freq_axial_sweep.py  freq_sweep.py  freq_sweep_25vpp.py  freq_sweep_2f.py  freq_sweep_coarse.py  freq_sweep_fine.py  freq_sweep_test5.py  freq_x_sweep.py  harmonics_profile.py  harmonics_vs_voltage.py  ldv_ptv_comparison.py  ldv_z_sweep.py  manuscript_figures.py  map_2d.py  pressure_buildup.py  pressure_map_2d.py  (+12 more)
plans/: af2026_figures.md  data_format_v2.md  manuscript_figures.md  new_analysis.md  refactoring.md  tilt_fix.md
reports/: 2026-03-03_burst_trigger_test.md  2026-03-03_stepA_freq_sweep.md  2026-03-06_stepA_resonance_shift.md  2026-03-18_ldv_piv_crossvalidation.md  2026-05-18_W21_sample_chip_voltage_sweep.md  2026-05-21_glass_pressure_self_verification.md  2026-05-21_glass_pressure_self_verification.py  2026-05-21_ldv_ptv_uncertainty_budget.md  2026-05-21_mount_drift_ratio_inflation.md  2026-05-22_uncertainty_budget_source_audit.md  2026-06-13_prl_figure_plan_and_waveguide_detuning.md  2026-06-18_b1_drive_purity.md  2026-06-18_f2_eigenmode_pin.md  2026-06-18_prl_resource_inventory.md  2026-06-22_prl_skeleton_and_analysis_plan.md
scripts/: 00_convert_tdms.py  01_electrical_input.py  02_velocity_profile.py  03_spectrum.py  04_2d_map.py  04a_boundary_detect.py  05_data_summary.py  config.py
tests/: conftest.py  test_fft.py  test_fft_pipeline_synthetic.py  test_figure_regression.py  test_filters.py  test_io_utils.py  test_mode_fit.py  test_physics.py  test_transient.py
(+85 files in other folders)
